Update View, Network
Fix reload bug